--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -101,12 +101,15 @@
       let subtitles = document.getElementsByTagName('h3');
       for (let k = 0; k < subtitles.length; k += 1) {
           subtitles[k].innerText = 'Insira um subtítulo aqui';
+
           subtitles[k].className = 'description'
       }
 
       title.className = 'title';
 
       mainSection.removeChild(leftSection);
+
+      rightSection.style.marginRight = 'auto';
 
     </script>
   </body>
