--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/exercicios.html
@@ -111,6 +111,8 @@
 
       rightSection.style.marginRight = 'auto';
 
+      centerSection.parentElement.style.backgroundColor = 'green';
+
     </script>
   </body>
 </html>
