Adiciona verificaçoes de datas

--- a/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-css-forms/form.html
+++ b/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-css-forms/form.html
@@ -54,6 +54,10 @@
         <label for="job-description">Descrição do cargo</label>
         <input type="text" name="job-description" id="job-description" maxlength="500" size="100" required>
       </div>
+      <div>
+        <label for="start-date"></label>
+        <input type="text" name="start-date" id="start-date">
+      </div>
     </fieldset>
   </form>
   <button id="submit-resume">Gerar currículo</button>
