Implementa função para adicionar compromissos

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-03-javascript-eventos/exercicios/index.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-03-javascript-eventos/exercicios/index.html
@@ -35,6 +35,8 @@
           placeholder="Escreva seu compromisso"
         >
         <button id="btn-add">Adicionar</button>
+        <div class="appointment-list-container">
+        </div>
       </div>
       <div class="task-list-container">
         <ul class="task-list">
