Separa o codigo do ex 3 pt 2 dos outros

--- a/fundamentos/bloco-07-introducao-a-javascript-es6-e-testes-unitarios/dia-01-let-const-arrow-functions-e-template-literals/exercicio-3-parte-ii.html
+++ b/fundamentos/bloco-07-introducao-a-javascript-es6-e-testes-unitarios/dia-01-let-const-arrow-functions-e-template-literals/exercicio-3-parte-ii.html
@@ -9,6 +9,6 @@
 <body>
   <button>Counter</button>
   <p></p>
-  <script src="exercicios-parte-ii.js"></script>
+  <script src="exercicio-3-parte-ii.js"></script>
 </body>
 </html>
