Diminui duplicação de código

--- a/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-04-javascript-web-storage/exercicios-de-fixacao/index2.html
+++ b/fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-04-javascript-web-storage/exercicios-de-fixacao/index2.html
@@ -21,6 +21,7 @@
       </div>
     </section>
   </main>
-  <script src="script2-1.js"></script>
+  <script type="module" src="script2-2.js"></script>
+  <script type="module" src="script2Functions.js"></script>
 </body>
 </html>
